--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="script.js"></script>
 <body>
-    
-</body>
+    <!-- <h1 id="myh1">Hello World!</h1>
+    <p class="myP">This is sentence 1</p>
+    <p class="myP"> This is sentence 2</p>
+    <button id="myButton">Click me 1</button>
+    <button>Click me 2</button>
+    <button>Click me 3</button>
+    <script src="index.js"></script> -->
 
+    <!-- <h1 id="myh1">Hello World!</h1>
+    <button id="mybutton">Submit</button>
+    <script src="index.js"></script> -->
+
+    <div id="myDiv"></div>
+    <script src="index.js"></script>
+</body>
 </html>
